template login y perfil agregados

--- a/templates/base/baseDash.html
+++ b/templates/base/baseDash.html
@@ -26,10 +26,9 @@
                                             <div class="user-position online">Tipo de empresa: {{persona.tipo}}</div>
                                         </div>
                                     </li>
-                                    <li><a href="#"><span class="icon mdi mdi-face"></span> Account</a></li>
+                                    <li><a href="{% url 'perfil'%}"><span class="icon mdi mdi-face"></span> Account</a></li>
                                     <li><a href="#"><span class="icon mdi mdi-settings"></span> Settings</a></li>
                                     <li><a href="#"><span class="icon mdi mdi-power"></span> Logout</a></li>
-                                    <li><a href="{% url 'listar' persona.username %}"><span class="icon mdi mdi-power"></span> Ver a todos los usuarios</a></li>
                                 </ul>
                             </li>
                         </ul>
