--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -12,7 +12,10 @@
 	<ul class=" navbar-nav ml-auto">
 	  <li class="nav-item active">
 		<a class="nav-link" href="#section1">¿Qué somos? <span class="sr-only">(current)</span></a>
-	  </li>
+		</li>
+		<li class="nav-item active">
+			<a class="nav-link" href="{% url 'login'%}">¿Qué somos2? <span class="sr-only">(current)</span></a>
+		</li>
 	  <li class="nav-item">
 		<a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">Entrar</a>
 	  </li>
