--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -14,10 +14,10 @@
 		<a class="nav-link" href="#section1">¿Qué somos? <span class="sr-only">(current)</span></a>
 		</li>
 		<li class="nav-item active">
-			<a class="nav-link" href="{% url 'login'%}">¿Qué somos2? <span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="{% url 'crear'%}">¿Qué somos2? <span class="sr-only">(current)</span></a>
 		</li>
 	  <li class="nav-item">
-		<a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">Entrar</a>
+		<a class="nav-link" href="{% url 'login'%}">Entrar</a>
 	  </li>
 	</ul>
   </div>
@@ -81,48 +81,7 @@
 {% endblock content %}
 
 {% block modales %}
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-	<div class="modal-content">
-	  <div class="modal-header">
-		<h5 class="modal-title text-center" id="exampleModalLabel">Log in_</h5>
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		  <span aria-hidden="true">&times;</span>
-		</button>
-	  </div>
-	  <div class="clearfix centrar modal-body">
-			{% if Mensaje != '' %}
-				<div class="alert alert-danger alert-dismissible fade show" role="alert">
-						<strong>Santo guacamole!</strong> {{Mensaje}}.
-						<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-				</div>
-			{% endif %}
-		  <p class="text-center mb-4 h5"> Bienvenido</p>
-		  <form method="post">
-			  {% csrf_token %}
-			<div class="form-group row">
-			  <label for="inputEmail3"  class="col-sm-2 col-form-label">Email</label>
-			  <div class="col-sm-10">
-				<input type="email" name="correo" class="form-control" id="inputEmail3" placeholder="Email">
-			  </div>
-			</div>
-			<div class="form-group row">
-			  <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-			  <div class="col-sm-10">
-				<input type="password" name="pass" class="form-control" id="inputPassword3" placeholder="Password">
-			  </div>
-			</div>
 
-			<button type="submit" class="mt-1 mb-2 btn btn-success "><i class="material-icons">done</i> Entrar</button>
-			<p class=" text-center">¿Aún no eres miembro? <a href="{% url 'crear' %}">únete a esta comunidad</a> </p>
-		</form>
-	  </div>
-	</div>
-  </div>
-</div>
 {% endblock modales %}
 
 
