--- a/templates/Home/login.html
+++ b/templates/Home/login.html
@@ -1,4 +1,7 @@
+{% extends "base/base.html" %}
+
 {% load staticfiles %}
+
 
 {% block css %}
 <link rel="stylesheet" type="text/css" href="{% static "assets/lib/perfect-scrollbar/css/perfect-scrollbar.min.css"%}"/>
@@ -15,10 +18,6 @@
 <link rel="shortcut icon" href="{% static "assets/img/logo-fav.png"%}">
 {% endblock css %}
 
-{% block menu-lateral %}
-
-{% endblock menu-lateral %}
-
 
 {% block content %}
 	<body class="be-splash-screen">        
@@ -29,12 +28,21 @@
             <div class="panel panel-default panel-border-color panel-border-color-primary">
               <div class="panel-heading"><img src="{% static 'assets/img/logo2.png' %}" alt="Apolo" width="102" height="140" class="logo-img"><span class="splash-description">Ingrese su información de usuario</span></div>
               <div class="panel-body">
-                <form action="index.html" method="get">
+                {% if Mensaje != '' %}
+                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>Santo guacamole!</strong> {{Mensaje}}.
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                {% endif %}
+                <form  method="post">
+                  {% csrf_token %}
                   <div class="form-group">
-                    <input id="username" type="text" placeholder="Nombre de usuario" autocomplete="off" class="form-control">
+                    <input id="username" name="correo" type="text" placeholder="Nombre de usuario" autocomplete="off" class="form-control">
                   </div>
                   <div class="form-group">
-                    <input id="password" type="password" placeholder="Contraseña" class="form-control">
+                    <input id="password" name="pass" type="password" placeholder="Contraseña" class="form-control">
                   </div>
                   <div class="form-group row login-tools">
                     <div class="col-xs-6 login-remember">
@@ -59,9 +67,6 @@
 </body>
 {% endblock content %}
 
-{% block configuracion %}
-
-{% endblock configuracion %}
 
 {% block script %}
   <script src="{% static "assets/lib/jquery/jquery.min.js"%}" type="text/javascript"></script>
