--- a/templates/Home/registro.html
+++ b/templates/Home/registro.html
@@ -3,7 +3,7 @@
 {% block titulo %}Apolo{% endblock titulo %}
 
 {% block content %}
-<nav class="navbar border border-warning navbar-expand-lg fixed-top navbar-light bg-white">
+<nav class="navbar border border-dark navbar-expand-lg fixed-top navbar-light bg-white">
   <a class="navbar-brand" id="Titulo" href="{% url 'index' %}"><i class="material-icons">cloud</i>  APOLO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
@@ -14,7 +14,7 @@
 		<a class="nav-link" href="#section1">¿Qué somos? <span class="sr-only">(current)</span></a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" data-toggle="modal" data-target="#exampleModal" href="#">Entrar</a>
+		<a class="nav-link" href="{% url 'login'%}">Entrar</a>
 	  </li>
 	</ul>
   </div>
@@ -22,17 +22,16 @@
 
 
 <div id="section1" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
-    {% if correto == 'v' %}
+    {% if Mensaje != '' %}
         <div class="row">
             <div class="col-lg-12">
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                  <strong>Santo guacamole!</strong> Se ha creado con exito el usuario.
+                <div class="alert alert-{{tipo}} alert-dismissible fade show" role="alert">
+                  <strong>Santo guacamole!</strong> {{Mensaje}}.
                   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
             </div>
-
         </div>
     {% endif %}
     <div class="row ">
@@ -74,54 +73,7 @@
 {% endblock content %}
 
 {% block modales %}
-<!-- Modal -->
-<div class="modal fade mb-4" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-	<div class="modal-content">
-	  <div class="modal-header">
-		<h5 class="modal-title text-center" id="exampleModalLabel">Log in_</h5>
-		<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-		  <span aria-hidden="true">&times;</span>
-		</button>
-	  </div>
-	  <div class="clearfix centrar modal-body">
-		  <p class="text-center mb-4 h5"> Bienvenido</p>
-		  <form method="post">
-			  {% csrf_token %}
-			<div class="form-group row">
-			  <label for="inputEmail3"  class="col-sm-2 col-form-label">Email</label>
-			  <div class="col-sm-10">
-				<input type="email" name="correo" class="form-control" id="inputEmail3" placeholder="Email">
-			  </div>
-			</div>
-			<div class="form-group row">
-			  <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
-			  <div class="col-sm-10">
-				<input type="password" name="pass" class="form-control" id="inputPassword3" placeholder="Password">
-			  </div>
-			</div>
 
-			<button type="submit" class="mt-1 mb-2 btn btn-success "><i class="material-icons">done</i> Entrar</button>
-
-		</form>
-	  </div>
-	</div>
-  </div>
-</div>
-
-<!-- Modal exito-->
-<div id="myModal" class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content ">
-      <div class="modal-header bg-success">
-        <h5 class="modal-title" id="exampleModalLongTitle">Se ha creado con exito el usuario.</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock modales %}
 
 {% block script %}
