Se mejoro la navegabilidad se añadieron nombres de espacio y nombres de apps IMPORTANTE, cambia el concepto de llamado de url en template a app_name:url, se usa las sesiones para paso de datos se activo el uso de la app empresa

--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -14,10 +14,10 @@
 		<a class="nav-link" href="#section1">¿Qué somos? <span class="sr-only">(current)</span></a>
 		</li>
 		<li class="nav-item active">
-			<a class="nav-link" href="{% url 'crear'%}">¿Qué somos2? <span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="{% url 'user:registro'%}">¿Qué somos2? <span class="sr-only">(current)</span></a>
 		</li>
 	  <li class="nav-item">
-		<a class="nav-link" href="{% url 'login'%}">Entrar</a>
+		<a class="nav-link" href="{% url 'user:login'%}">Entrar</a>
 	  </li>
 	</ul>
   </div>
