--- a/templates/base/baseDash.html
+++ b/templates/base/baseDash.html
@@ -26,9 +26,9 @@
                                             <div class="user-position online">Tipo de empresa: {{persona.tipo}}</div>
                                         </div>
                                     </li>
-                                    <li><a href="{% url 'perfil' %}"><span class="icon mdi mdi-face"></span> Account</a></li>
+                                    <li><a href="{% url 'empresa:perfil' %}"><span class="icon mdi mdi-face"></span> Account</a></li>
                                     <li><a href="#"><span class="icon mdi mdi-settings"></span> Settings</a></li>
-                                    <li><a href="{% url 'logout' %}"><span class="icon mdi mdi-power"></span> Logout</a></li>
+                                    <li><a href="{% url 'empresa:logout' %}"><span class="icon mdi mdi-power"></span> Logout</a></li>
                                 </ul>
                             </li>
                         </ul>
