--- a/templates/Home/perfil.html
+++ b/templates/Home/perfil.html
@@ -24,7 +24,7 @@
           <div class="left-sidebar-content">
             <ul class="sidebar-elements">
               <li class="divider">Menu</li>
-              <li class="active"><a href="{% url 'index' %}"><i class="icon mdi mdi-home"></i><span>Dashboard</span></a>
+              <li class="active"><a href="{% url 'empresa:index' %}"><i class="icon mdi mdi-home"></i><span>Dashboard</span></a>
               </li>
               <li class="parent"><a href="#"><i class="icon mdi mdi-face"></i><span>UI Elements</span></a>
                 <ul class="sub-menu">
