--- a/templates/Home/registro.html
+++ b/templates/Home/registro.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <nav class="navbar border border-dark navbar-expand-lg fixed-top navbar-light bg-white">
-  <a class="navbar-brand" id="Titulo" href="{% url 'index' %}"><i class="material-icons">cloud</i>  APOLO</a>
+  <a class="navbar-brand" id="Titulo" href="{% url 'user:index' %}"><i class="material-icons">cloud</i>  APOLO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
   </button>
@@ -14,7 +14,7 @@
 		<a class="nav-link" href="#section1">¿Qué somos? <span class="sr-only">(current)</span></a>
 	  </li>
 	  <li class="nav-item">
-		<a class="nav-link" href="{% url 'login'%}">Entrar</a>
+		<a class="nav-link" href="{% url 'user:login'%}">Entrar</a>
 	  </li>
 	</ul>
   </div>
