Se creo el formulario.py de registro empresa, se creo una ruta alternativa para cuando un usuario no presenta una empresa la pueda registrar y para que los usuarios que ya tengan una empresa registra se redireccionen directo a su respectivo dashboard, se modifico el modelo de empresa en el campo ususuario para que pudiese ser nulo y asi pasarle su respectivo usuario de manera transparente.

--- a/templates/base/baseDash.html
+++ b/templates/base/baseDash.html
@@ -23,7 +23,8 @@
                                     <li>
                                         <div class="user-info">
                                             <div class="user-name">{{persona.first_name}}</div>
-                                            <div class="user-position online">Tipo de empresa: {{persona.tipo}}</div>
+                                            <div class="user-position">{{empresa.Nombre_empresa}}</div>
+                                            <div class="user-position">Tipo de empresa: {{empresa.Sector}}</div>
                                         </div>
                                     </li>
                                     <li><a href="{% url 'empresa:perfil' %}"><span class="icon mdi mdi-face"></span> Account</a></li>
