--- a/templates/base/baseDash.html
+++ b/templates/base/baseDash.html
@@ -15,7 +15,7 @@
         <!-- Hea -->
         <nav class="navbar navbar-default navbar-fixed-top be-top-header">
             <div class="container-fluid">
-                <div class="navbar-header"><a href="index.html" class="text-center navbar-brand">Apolo</a></div>
+                <div class="navbar-header"><a href="{% url 'usuarios:index' %}" class="text-center navbar-brand">Apolo</a></div>
                     <div class="be-right-navbar">
                         <ul class="nav navbar-nav navbar-right be-user-nav">
                             <li class="dropdown"><a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="dropdown-toggle"><img src="{% static "assets/img/avatar.png"%}" alt="Avatar"><span class="user-name">{{persona.first_name}}</span></a>
