--- a/templates/Home/registro.html
+++ b/templates/Home/registro.html
@@ -1,6 +1,19 @@
 {% extends "base/base.html" %}
-
+{% load staticfiles %}
 {% block titulo %}Apolo{% endblock titulo %}
+
+{% block css %}
+    <style>
+    body {
+        font-family: 'Roboto', Arial, sans-serif;
+        font-size: 13px;
+        line-height: 1.42857143;
+        color: #404040;
+        background-color: #EEEEEE;
+    }
+    </style>
+       
+{% endblock css %}
 
 {% block content %}
 <nav class="navbar border border-dark navbar-expand-lg fixed-top navbar-light bg-white">
@@ -33,43 +46,58 @@
                 </div>
             </div>
         </div>
-    {% endif %}
-    <div class="row ">
-        <div class="d-none d-lg-block col-lg-6">
-            <h2 class="display-1">Imagen</h2>
-        </div>
-        <div class="clearfix border col-sm-12 col-lg-6">
-            <form method="post">
-                {% csrf_token %}
-                {{form.as_p}}
-                <!--<div class="form-group">
-                    {{form.username}}
-                </div>
+    {% endif %}   
+    
+    <div class="ml-auto">
+        <div class="col-ml-8">
+            <div class="panel panel-default">
+            <div class="panel-heading panel-heading-divider">Registro<span class="panel-subtitle">These are the basic bootstrap form elements</span></div>
+            <div class="panel-body">
+                <form method="post" style="border-radius: 0px;" class="form-horizontal group-border-dashed">
+                    {% csrf_token %}
+                    {{form.as_p}}
+                <!--    {{form.non_field_errors}}
                 <div class="form-group">
-                    {{form.email}}
-                </div>
-                <div class="form-group">
+                    {{form.first_name.errors}}
+                    <label for="form.first_name.id_for_label" class="col-sm-3 control-label">Nombres</label>
+                    <div class="col-sm-6">
                     {{form.first_name}}
+                    </div>
                 </div>
                 <div class="form-group">
-                    {{form.last_name}}
+                        {{form.last_name.errors}}
+                        <label for="form.last_name.id_for_label" class="col-sm-3 control-label">Apellidos</label>
+                        <div class="col-sm-6">
+                        {{form.last_name}}
+                        </div>
                 </div>
                 <div class="form-group">
-                    {{form.tipo}}
+                        {{form.username.errors}}
+                        <label for="form.username.id_for_label" class="col-sm-3 control-label">Correo electrónico</label>
+                        <div class="col-sm-6">
+                        {{form.username}}
+                        </div>
                 </div>
                 <div class="form-group">
-                    {{form.activos}}
+                    {{form.password.errors}}
+                    <label for="form.password.id_for_label" class="col-sm-3 control-label">Contraseña</label>
+                    <div class="col-sm-6">
+                        {{form.password}}                   
+                    </div>
                 </div>
                 <div class="form-group">
-                    {{form.numeroEmpl}}
+                        <label class="col-sm-3 control-label">Confirmar contraseña</label>
+                        <div class="col-sm-6">                            
+                        <input type="password" class="form-control">
+                        </div>
                 </div>-->
-                <button type="submit" class=" centrar btn btn-success" name="button">Listo</button>
-            </form>
+                
+                <button type="submit" class="btn btn-primary" name="button">Registro</button>                                
+                </form>
+            </div>
+            </div>
         </div>
-    </div>
-</div>
-
-
+    </div>             
 {% endblock content %}
 
 {% block modales %}
