--- a/templates/Home/login.html
+++ b/templates/Home/login.html
@@ -48,7 +48,7 @@
                   <div class="form-group login-submit">
                     <button data-dismiss="modal" type="submit" class="btn btn-primary btn-xl">Entrar</button>
                   </div>
-                  <div class="text-center"><span>¿No tiene una cuenta? <a href="#">Crear cuenta</a></span></div>
+                  <div class="text-center"><span>¿No tiene una cuenta? <a href="{% url 'user:registro'%}">Crear cuenta</a></span></div>
                 </form>
                 <div class="text-center">                    
                   <a href="#">¿Olvidó su contraseña?</a>
