--- a/templates/Home/registro.html
+++ b/templates/Home/registro.html
@@ -3,6 +3,7 @@
 {% block titulo %}Apolo{% endblock titulo %}
 
 {% block css %}
+    <link rel="stylesheet" href="{% static "assets/css/style.css" %}">
     <style>
     body {
         font-family: 'Roboto', Arial, sans-serif;
@@ -16,7 +17,7 @@
 {% endblock css %}
 
 {% block content %}
-<nav class="navbar border border-dark navbar-expand-lg fixed-top navbar-light bg-white">
+<nav class="navbar border navbar-expand-lg fixed-top navbar-light bg-white">
   <a class="navbar-brand" id="Titulo" href="{% url 'user:index' %}"><i class="material-icons">cloud</i>  APOLO</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
@@ -34,7 +35,7 @@
 </nav>
 
 
-<div id="section1" class="container-fluid" style="padding-top:70px;padding-bottom:70px">
+<div id="section1" class="container-fluid" >
     {% if Mensaje != '' %}
         <div class="row">
             <div class="col-lg-12">
@@ -55,8 +56,8 @@
             <div class="panel-body">
                 <form method="post" style="border-radius: 0px;" class="form-horizontal group-border-dashed">
                     {% csrf_token %}
-                    {{form.as_p}}
-                <!--    {{form.non_field_errors}}
+                   <!-- {{form.as_p}} -->
+                 {{form.non_field_errors}}
                 <div class="form-group">
                     {{form.first_name.errors}}
                     <label for="form.first_name.id_for_label" class="col-sm-3 control-label">Nombres</label>
@@ -88,10 +89,14 @@
                 <div class="form-group">
                         <label class="col-sm-3 control-label">Confirmar contraseña</label>
                         <div class="col-sm-6">                            
-                        <input type="password" class="form-control">
+                        <input type="password" name="c_contraseña" class="form-control">
                         </div>
-                </div>-->
-                
+                </div>
+                {{form.date_joined}} 
+                {{form.is_active}} 
+                {{form.is_staff}} 
+                {{form.is_superuser}} 
+                {{form.last_login}} 
                 <button type="submit" class="btn btn-primary" name="button">Registro</button>                                
                 </form>
             </div>
