Ajustes frontend en dashboard

--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -25,11 +25,11 @@
 		<div id="fondoJ" class="centrar  espandeDivs jumbotron">
 			<br>
 			<h1 class="text-center  titulos">¡Bienvenido!</h1>
-			<p class="text-center subTitulo">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+			<p class="text-center subTitulo">Apolo es una herramienta para determinar la competitividad de una empresa</p>
 			<hr class="my-4">
-			<p class="d-none d-lg-block">It uses utility classes for typography and spacing to space content out within the larger container.</p>
+			<p class="d-none d-lg-block">Se detectan las fortalezas y debilidades, además se ofrece un plan de mejoramiento para el fortalecimiento de las falencias encontradas.</p>
 			<p class="lead">
-				<a class=" btn btn-primary btn-lg" href="{% url 'user:registro'%}" role="button">Registrate es completamente gratis.</a>
+				<a class=" btn btn-primary btn-lg" href="{% url 'user:registro'%}" role="button">Registrar</a>
 			</p>
 		</div>
 	</div>
@@ -38,12 +38,8 @@
 <div id="section1" class="container-fluid bg-success" style="padding-top:70px;padding-bottom:70px">
 	<div class="row espandeDivs">
 		<div class="col-sm-12 col-md-12 col-lg-6">
-			<h2>Texto explicativo #1</h2>
-			<p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-			<p><small>This line of text is meant to be treated as fine print.</small></p>
-			<p>The following is <strong>rendered as bold text</strong>.</p>
-			<p>The following is <em>rendered as italicized text</em>.</p>
-			<p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+			<h2>¿Cómo funciona?</h2>
+			<p class="text-justify">Mediante la metodología del Banco Interamericano de Desarrollo se evaluan las distintas áreas que componen una empresa, cada área tiene un conjunto de preguntas para medir los indicadores acordes al área.</p>
 		</div>
 		<div class="d-none d-lg-block col-lg-6">
 			<h2>Imagen</h2>
