--- a/templates/base/baseDash.html
+++ b/templates/base/baseDash.html
@@ -6,8 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block titulo %}APOLO{% endblock %}</title>
-    {% block css %}{% endblock css %}
+    <title>{% block titulo %}Apolo{% endblock %}</title>
+    {% block css %}
+    <link rel="shortcut icon" href="{% static "assets/img/logo4.png"%}">
+    {% endblock css %}
 
 </head>
 <body>
@@ -25,22 +27,21 @@
                                             
                                             {% if empresa != '' %}
                                                 <div class="user-name">{{empresa.usuario.first_name}}</div>
-                                                <div class="user-position">{{empresa.Nombre_empresa}}</div>
-                                                <div class="user-position">Tipo de empresa: {{empresa.Sector}}</div>
+                                                <div>{{empresa.Nombre_empresa}}</div>
+                                                <div>Tipo de empresa: {{empresa.Sector}}</div>
                                             {% else %}
                                                 <div class="user-name">{{persona.first_name}}</div>
                                             {% endif %}
                                         </div>
                                     </li>
-                                    <li><a href="{% url 'empresa:perfil' %}"><span class="icon mdi mdi-face"></span> Account</a></li>
-                                    <li><a href="#"><span class="icon mdi mdi-settings"></span> Settings</a></li>
-                                    <li><a href="{% url 'empresa:logout' %}"><span class="icon mdi mdi-power"></span> Logout</a></li>
+                                    <li><a href="{% url 'empresa:perfil' %}"><span class="icon mdi mdi-face"></span> Perfil</a></li>
+                                    <li><a href="#"><span class="icon mdi mdi-settings"></span> Ajustes</a></li>
+                                    <li><a href="{% url 'empresa:logout' %}"><span class="icon mdi mdi-power"></span> Salir</a></li>
                                 </ul>
                             </li>
                         </ul>
                         <div class="page-title"><span>Bienvenido</span></div>
                         <ul class="nav navbar-nav navbar-right be-icons-nav">
-                            <li class="dropdown"><a href="#" role="button" aria-expanded="false" class="be-toggle-right-sidebar"><span class="icon mdi mdi-settings"></span></a></li>
                             <li class="dropdown"><a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="dropdown-toggle"><span class="icon mdi mdi-notifications"></span><span class="indicator"></span></a>
                                 <ul class="dropdown-menu be-notifications">
                                     <li>
@@ -50,24 +51,24 @@
                                                 <div class="content">
                                                     <ul>
                                                     <li class="notification notification-unread"><a href="#">
-                                                        <div class="image"><img src="assets/img/avatar2.png" alt="Avatar"></div>
+                                                        <div class="image"><img src="{% static 'assets/img/avatar2.png' %}" alt="Avatar"></div>
                                                         <div class="notification-info">
                                                         <div class="text"><span class="user-name">Jessica Caruso</span> accepted your invitation to join the team.</div><span class="date">2 min ago</span>
                                                         </div></a></li>
                                                     <li class="notification"><a href="#">
-                                                        <div class="image"><img src="assets/img/avatar3.png" alt="Avatar"></div>
+                                                        <div class="image"><img src="{% static 'assets/img/avatar3.png' %}" alt="Avatar"></div>
                                                         <div class="notification-info">
                                                         <div class="text"><span class="user-name">Joel King</span> is now following you</div><span class="date">2 days ago</span>
                                                         </div></a>
                                                     </li>
                                                     <li class="notification"><a href="#">
-                                                        <div class="image"><img src="assets/img/avatar4.png" alt="Avatar"></div>
+                                                        <div class="image"><img src="{% static 'assets/img/avatar4.png' %}" alt="Avatar"></div>
                                                         <div class="notification-info">
                                                             <div class="text"><span class="user-name">John Doe</span> is watching your main repository</div><span class="date">2 days ago</span>
                                                         </div></a>
                                                     </li>
                                                     <li class="notification"><a href="#">
-                                                        <div class="image"><img src="assets/img/avatar5.png" alt="Avatar"></div>
+                                                        <div class="image"><img src="{% static 'assets/img/avatar5.png' %}" alt="Avatar"></div>
                                                         <div class="notification-info"><span class="text"><span class="user-name">Emily Carter</span> is now following you</span><span class="date">5 days ago</span></div></a>
                                                     </li>
                                                 </ul>
@@ -84,14 +85,14 @@
                                     <div class="list">
                                         <div class="content">
                                             <div class="row">
-                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="assets/img/github.png" alt="Github"><span>GitHub</span></a></div>
-                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="assets/img/bitbucket.png" alt="Bitbucket"><span>Bitbucket</span></a></div>
-                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="assets/img/slack.png" alt="Slack"><span>Slack</span></a></div>
+                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="{% static 'assets/img/github.png' %}" alt="Github"><span>GitHub</span></a></div>
+                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="{% static 'assets/img/bitbucket.png' %}" alt="Bitbucket"><span>Bitbucket</span></a></div>
+                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="{% static 'assets/img/slack.png' %}" alt="Slack"><span>Slack</span></a></div>
                                             </div>
                                             <div class="row">
-                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="assets/img/dribbble.png" alt="Dribbble"><span>Dribbble</span></a></div>
-                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="assets/img/mail_chimp.png" alt="Mail Chimp"><span>Mail Chimp</span></a></div>
-                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="assets/img/dropbox.png" alt="Dropbox"><span>Dropbox</span></a></div>
+                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="{% static 'assets/img/dribbble.png' %}" alt="Dribbble"><span>Dribbble</span></a></div>
+                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="{% static 'assets/img/mail_chimp.png' %}" alt="Mail Chimp"><span>Mail Chimp</span></a></div>
+                                                <div class="col-xs-4"><a href="#" class="connection-item"><img src="{% static 'assets/img/dropbox.png' %}" alt="Dropbox"><span>Dropbox</span></a></div>
                                             </div>
                                         </div>
                                     </div>
