--- a/templates/Home/registro.html
+++ b/templates/Home/registro.html
@@ -3,6 +3,7 @@
 {% block titulo %}Apolo{% endblock titulo %}
 
 {% block css %}
+    <link rel="shortcut icon" href="{% static "assets/img/logo4.png"%}">
     <link rel="stylesheet" href="{% static "assets/css/style.css" %}">
     <style>
     body {
@@ -18,10 +19,10 @@
 
 {% block content %}
 <nav class="navbar border navbar-expand-lg fixed-top navbar-light bg-white">
-  <a class="navbar-brand" id="Titulo" href="{% url 'user:index' %}"><i class="material-icons">cloud</i>  APOLO</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" id="Titulo" href="{% url 'user:index' %}"><i class="material-icons">cloud</i>  APOLO</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+	    <span class="navbar-toggler-icon"></span>
+    </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
 	<ul class=" navbar-nav ml-auto">
 	  <li class="nav-item active">
