--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,7 +12,10 @@
      <link rel="stylesheet" href="{% static "css/indexS.css" %}">
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link href="{% static "font/css/open-iconic-bootstrap.css" %}" rel="stylesheet">
-     {% block css %}{% endblock css %}
+
+     {% block css %}
+     <link rel="shortcut icon" href="{% static "assets/img/logo4.png"%}">
+     {% endblock css %}
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
