ajustes frontend en registros

--- a/templates/DashBoard/index.html
+++ b/templates/DashBoard/index.html
@@ -22,23 +22,23 @@
           <div class="left-sidebar-content">
             <ul class="sidebar-elements">
               <li class="divider">Menu</li>
-              <li class="active"><a href="index.html"><i class="icon mdi mdi-home"></i><span>Inicio</span></a>
+              <li class="active"><a href="{% url 'usuarios:index' %}"><i class="icon mdi mdi-home"></i><span>Inicio</span></a>
               </li>
-              <li class="parent"><a href="#"><i class="icon mdi mdi-face"></i><span>Evaluaciones</span></a>
+              <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Evaluaciones</span></a>
                 <ul class="sub-menu">
-                  <li><a href="">Consultar evaluación</a>
+                  <li><a href="#">Consultar evaluación</a>
                   </li>
-                  <li><a href="">Realizar evaluación</a>
+                  <li><a href="#">Realizar evaluación</a>
                   </li>                 
                 </ul>
               </li>
-              <li><a href="#"><i class="icon mdi mdi-dot-circle"></i><span>Plan de mejoramiento</span></a>
+              <li><a href="#"><i class="icon mdi mdi-assignment-o"></i><span>Plan de mejoramiento</span></a>
               </li>
-              <li class="parent"><a href="#"><i class="icon mdi mdi-border-all"></i><span>Contactar</span></a>
+              <li class="parent"><a href="#"><i class="icon mdi mdi-email"></i><span>Contactar</span></a>
                 <ul class="sub-menu">
-                  <li><a href="tables-general.html">Bandaje de entrada</a>
+                  <li><a href="#">Bandaje de entrada</a>
                   </li>
-                  <li><a href="tables-datatables.html">Enviar mensaje</a>
+                  <li><a href="#">Enviar mensaje</a>
                   </li>
                 </ul>
               </li>  
