--- a/templates/Empresa/registro_empresa.html
+++ b/templates/Empresa/registro_empresa.html
@@ -34,10 +34,10 @@
         </div>
     {% endif %}   
     
-    <div class="ml-auto">
-        <div class="col-ml-8">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
-            <div class="panel-heading panel-heading-divider">Registro de empresa<span class="panel-subtitle">These are the basic bootstrap form elements</span></div>
+                    <div class="panel-heading text-center"><img src="{% static 'assets/img/logo2.png' %}" alt="Apolo" width="102" height="140" class="logo-img"><span class="splash-description">Registro de empresa</span></div>
             <div class="panel-body">
                 <form method="post" style="border-radius: 0px;" class="form-horizontal group-border-dashed">
                     {% csrf_token %}
@@ -83,8 +83,10 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-primary btn-lg btn-block" name="button">Registro</button>                                
-                </form>
+                <div class="text-center">
+                        <button type="submit" class="btn btn-primary" name="button">Registro</button> 
+                </div>                
+            </form>
             </div>
             </div>
         </div>
