--- a/templates/Administrador/crearPlan.html
+++ b/templates/Administrador/crearPlan.html
@@ -22,7 +22,7 @@
           <div class="left-sidebar-content">
             <ul class="sidebar-elements">
               <li class="divider">Menu</li>
-              <li class="active"><a href="{% url 'usuarios:index' %}"><i class="icon mdi mdi-home"></i><span>Inicio</span></a>
+              <li><a href="{% url 'usuarios:index' %}"><i class="icon mdi mdi-home"></i><span>Inicio</span></a>
               </li>
               <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Evaluaciones</span></a>
                 <ul class="sub-menu">
@@ -32,13 +32,13 @@
                   </li>                 
                 </ul>
               </li>
-              <li class="parent"><a href="#"><i class="icon mdi mdi-assignment-o"></i><span>Plan de mejoramiento</span></a>
+              <li class="parent active"><a href="#"><i class="icon mdi mdi-assignment-o"></i><span>Plan de mejoramiento</span></a>
                 <ul class="sub-menu">
-                        <li><a href="{% url 'admon:verPlan' %}">Ver planes</a>
-                        </li>
-                        <li><a href="{% url 'admon:crearPlan' %}">Crear planes</a>
-                        </li>                 
-                      </ul>
+                    <li><a href="{% url 'admon:verPlan' %}">Ver planes</a>
+                    </li>
+                    <li><a href="{% url 'admon:crearPlan' %}">Crear planes</a>
+                    </li>                 
+                </ul>
               </li>                
             </ul>
           </div>
@@ -52,7 +52,7 @@
 <div class="be-content">
     <div class="main-content container-fluid">
       <div class="row">
-       
+       crear plan
     </div>
   </div>
 </div>
