--- a/templates/Administrador/verPlan.html
+++ b/templates/Administrador/verPlan.html
@@ -22,7 +22,7 @@
           <div class="left-sidebar-content">
             <ul class="sidebar-elements">
               <li class="divider">Menu</li>
-              <li class="active"><a href="{% url 'usuarios:index' %}"><i class="icon mdi mdi-home"></i><span>Inicio</span></a>
+              <li><a href="{% url 'usuarios:index' %}"><i class="icon mdi mdi-home"></i><span>Inicio</span></a>
               </li>
               <li class="parent"><a href="#"><i class="icon mdi mdi-chart"></i><span>Evaluaciones</span></a>
                 <ul class="sub-menu">
@@ -32,7 +32,7 @@
                   </li>                 
                 </ul>
               </li>
-              <li class="parent"><a href="#"><i class="icon mdi mdi-assignment-o"></i><span>Plan de mejoramiento</span></a>
+              <li class="parent active"><a href="#"><i class="icon mdi mdi-assignment-o"></i><span>Plan de mejoramiento</span></a>
                 <ul class="sub-menu">
                         <li><a href="{% url 'admon:verPlan' %}">Ver planes</a>
                         </li>
@@ -52,7 +52,7 @@
 <div class="be-content">
     <div class="main-content container-fluid">
       <div class="row">
-       
+       Ver plan
     </div>
   </div>
 </div>
