--- a/templates/Home/index.html
+++ b/templates/Home/index.html
@@ -7,12 +7,15 @@
 {% block content %}
 
 <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-white">
-  <a class="navbar-brand" id="Titulo" href="#"><img src="{% static 'assets/img/logo5.png' %}" width="170" height="65" class="d-inline-block align-top" alt=""></a>
+  <a class="navbar-brand" id="Titulo" href="{% url 'usuarios:index' %}"><img src="{% static 'assets/img/logo5.png' %}" width="150" height="50" class="d-inline-block align-top" alt=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
 	<ul class=" navbar-nav ml-auto">
+			<li class="nav-item">
+					<a class="nav-link" href="{% url 'admon:inicio'%}">admin</a>
+					</li>
 	  <li class="nav-item active">
 		<a class="nav-link" href="#section1">¿Qué somos? <span class="sr-only">(current)</span></a>
 		</li>
