--- a/templates/Home/login.html
+++ b/templates/Home/login.html
@@ -13,52 +13,57 @@
 <link rel="stylesheet" type="text/css" href="{% static "assets/lib/jqvmap/jqvmap.min.css"%}"/>
 <link rel="stylesheet" type="text/css" href="{% static "assets/lib/datetimepicker/css/bootstrap-datetimepicker.min.css"%}"/>
 <link rel="stylesheet" type="text/css" href="{% static "assets/css/style.css"%}" />
+<link rel="shortcut icon" href="{% static "assets/img/logo4.png"%}">
 <link rel="stylesheet" type="text/css" href="{% static 'assets/lib/perfect-scrollbar/css/perfect-scrollbar.min.css' %}"/>
 <link rel="stylesheet" type="text/css" href="{% static 'assets/lib/material-design-icons/css/material-design-iconic-font.min.css' %}"/>
 {% endblock css %}
 
 
 {% block content %}
-	<body class="be-splash-screen">        
-    <div class="be-wrapper be-login">
-      <div class="be-content">
-        <div class="main-content container-fluid">
-          <div class="splash-container">
-            <div class="panel panel-default panel-border-color panel-border-color-primary">
-              <div class="panel-heading"><img src="{% static 'assets/img/logo2.png' %}" alt="Apolo" width="102" height="140" class="logo-img"><span class="splash-description">Ingrese su información de usuario</span></div>
-              <div class="panel-body">
-                {% if Mensaje != '' %}
-                  <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <strong>Santo guacamole!</strong> {{Mensaje}}.
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </div>
-                {% endif %}
-                <form  method="post">
-                  {% csrf_token %}
-                  <div class="form-group">
-                    <input id="username" name="correo" type="text" placeholder="Correo electrónico" autocomplete="off" class="form-control">
-                  </div>
-                  <div class="form-group">
-                    <input id="password" name="pass" type="password" placeholder="Contraseña" class="form-control">
-                  </div>
-                  
-                  <div class="form-group login-submit">
-                    <button data-dismiss="modal" type="submit" class="btn btn-primary btn-xl">Entrar</button>
-                  </div>
-                  <div class="text-center"><span>¿No tiene una cuenta? <a href="{% url 'user:registro'%}">Crear cuenta</a></span></div>
-                </form>
-                <div class="text-center">                    
-                  <a href="#">¿Olvidó su contraseña?</a>
-                </div>
-              </div>
+	<body class="be-splash-screen">  
+    <div class="splash-container">
+      <div class="panel panel-default panel-border-color panel-border-color-primary">
+        <div class="panel-heading">
+            <a href="{% url 'user:index'%}">
+                <img src="{% static 'assets/img/logo2.png' %}" href="{% url 'user:login'%}" alt="Apolo" width="102" height="140" class="logo-img" >
+            </a>           
+            <h3>Ingrese su información de usuario</h3>   
+        </div>
+
+        <div class="panel-body">
+          {% if Mensaje != '' %}
+          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>Santo guacamole!</strong> {{Mensaje}}.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          {% endif %}
+
+          <form  method="post">
+            {% csrf_token %}
+            <div class="form-group">
+              <input id="username" name="correo" type="text" placeholder="Correo electrónico" autocomplete="off" class="form-control">
+            </div>
+
+            <div class="form-group">
+              <input id="password" name="pass" type="password" placeholder="Contraseña" class="form-control">
             </div>
             
+            <div class="form-group login-submit">
+              <button data-dismiss="modal" type="submit" class="btn btn-primary btn-xl">Entrar</button>
+            </div>
+
+            <div class="text-center"><span>¿No tiene una cuenta? <a href="{% url 'user:registro'%}">Crear cuenta</a></span></div>
+          </form>
+
+          <div class="text-center">                    
+            <a href="#">¿Olvidó su contraseña?</a>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </body>
 {% endblock content %}
 
@@ -81,10 +86,8 @@
   <script src="{% static "assets/js/app-dashboard.js"%}" type="text/javascript"></script>
   <script type="text/javascript">
     $(document).ready(function(){
-      //initialize the javascript
       App.init();
-      App.dashboard();
-     
+      App.dashboard();     
     });
   </script>
 {% endblock script %}
